--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Adeola</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">Happy Birthday to u my SoulMate!</p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
@@ -32,7 +32,7 @@
       <p class="idea-1">That's what I was going to do.</p>
       <p class="idea-2">But then I stopped.</p>
       <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
+        <strong>unique</strong>.</p>
       <p class="idea-4">Because,</p>
       <p class="idea-5">You are Special
         <span>:)</span>
@@ -47,7 +47,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">I will always Luv u Teddy! ;)</h5>
       </div>
     </div>
     <div class="seven">
