--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">I wish you the best in life!! My CupCake! ...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -32,9 +32,9 @@
       <p class="idea-1">That's what I was going to do.</p>
       <p class="idea-2">But then I stopped.</p>
       <p class="idea-3">I realised, I wanted to do something
-        <strong>unique</strong>.</p>
+        <strong>Unique</strong>.</p>
       <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-5">You are Special to me
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -43,11 +43,11 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/adel1.jpeg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/adel1.jpeg" alt="" class="lydia-dp" id="imagePath" style="border-radius: 10px;">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">I will always Luv u Teddy! ;)</h5>
+        <h5 id="wishText"><b>I will always Luv u ! ;)</b></h5>
       </div>
     </div>
     <div class="seven">
@@ -118,8 +118,9 @@
     </div>
     <div class="nine">
       <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p id="replay" style="color: red;"><b>Or click, if you want to watch it again.</b></p>
       <p class="last-smile">:)</p>
+      <p><b>Copyright &copy; WireDevTeam</b></p>
     </div>
   </div>
 </body>
