--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="./index.css">
+
 </head>
 
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
-        <span id="name">Adeola</span>
+      <h1 class="one">Happy Birthday
+        <span id="name">Ma</span>
       </h1>
-      <p class="two" id="greetingText">Happy Birthday to u my SoulMate!</p>
+      <p class="two" id="greetingText" style="color: red"><b>Thank you for always been there for me</b></p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
+      <p style="font-size: 18px;">I wish you long life in good health, peace of mind and happiness. </p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">I wish you the best in life!! My CupCake! ...</p>
-        <p class="fake-btn">Send</p>
+        <p class="hbd-chatbox">I Appreciate you for all you have done for me even 
+          though I could be difficult, I will never forget how strong of a woman you’re..</p>
+        <!-- <p class="fake-btn">Send</p> -->
       </div>
     </div>
     <div class="five">
@@ -34,7 +38,7 @@
       <p class="idea-3">I realised, I wanted to do something
         <strong>Unique</strong>.</p>
       <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special to me
+      <p class="idea-5">You are so Special to me
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -43,8 +47,8 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/adel1.jpeg" alt="" class="lydia-dp" id="imagePath" style="border-radius: 10px;">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="img/work1.jpeg" alt="" class="lydia-dp" id="imagePath" style="border-radius: 10px;">
+      <!-- <img src="img/hat.svg" alt="" class="hat"> -->
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
         <h5 id="wishText"><b>I will always Luv u ! ;)</b></h5>
@@ -118,8 +122,11 @@
     </div>
     <div class="nine">
       <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay" style="color: red;"><b>Or click, if you want to watch it again.</b></p>
+      <p id="replay" style="color: red;"><b>Or click here, if you want to watch it again.</b></p>
       <p class="last-smile">:)</p>
+      <p style="color: brown; text-decoration: underline;" class="from"><b> From Dee</b></p>
+
+      
       <p><b>Copyright &copy; WireDevTeam</b></p>
     </div>
   </div>
